--- a/public/journals/83/styleSheet.css
+++ b/public/journals/83/styleSheet.css
@@ -1,319 +1,252 @@
-/**
- * common.css-editando
- * Copyright (c) 2000-2012 John Willinsky
- * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
- * PKP-wide shared stylesheet.
- * Common HTML elements
- */
-/*@import url(http://fonts.googleapis.com/css?family=Ubuntu:300);*/
-div#pkp_content_main {
- background: #fff;
-}
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:300);
 
-.page.page_announcement {
-   margin: 20px 0 0;
+/* Overrides */
+.pkp_structure_page {
+ box-shadow: rgba(0, 0, 0, 0.5) 0 0 10px;
+ min-width: 387px;
 }
-
-body {
- font-family: "Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif;
- color: #333;
- background: #f5f5f5;
-}
-
-/* Footer */
-.pkp_footer_content #footer-title {
- margin-bottom: 5px;
- font-weight: bold;
- text-align: center;
-}
-.pkp_footer_content {
- margin: 0 1vw;
- padding: 5px;
- text-align: center;
- font-size: 0.9em;
-}
-.pkp_footer_content img {
+.pkp_structure_content {
  display: inline-flex;
- flex-direction: row;
- margin: 0 2px 0;
- height: max(10px, 3vw);
- width: auto;
 }
-.pkp_footer_content a {
- text-decoration: none;
+#pkp_content_main,
+.pkp_structure_content,
+.pkp_head_wrapper,
+.pkp_navigation_user,
+.pkp_structure_footer,
+.pkp_content_footer,
+.pkp_structure_sidebar {
+ width: auto !important;
 }
 
-.pkp_structure_footer_wrapper {
- background: #ddd;
- font-size: 1.0em;
- border-bottom: 1px solid #4b7d92;
+.pkp_page_index .cmp_announcements {
+ border: none !important;
 }
-.pkp_structure_footer {
- margin-top: 30px;
-}
-.pkp_brand_footer {
+::before,
+::after {
  display: none;
 }
 
+/* Generic */
+body {
+ font-family: 'Montserrat', 'Segoe UI', 'system-ui', 'Roboto', 'Oxygen-Sans', 'Ubuntu', 'Cantarell', 'Helvetica Neue',
+  sans-serif;
+ background: #f5f5f5;
+ padding: 2vw max(7px, 11.7vw);
+}
+
 a {
- text-decoration:none;
- color: #4b7d92;
+ color: #65a6c2;
+ text-decoration: none;
 }
 a:hover {
- text-decoration:none;
- color: #FF7F00;
+ color: #ff7f00;
+ text-decoration: none;
+ cursor: pointer;
 }
-/*headerrrrrrrrrrr strt*/
+.pkp_nav_list li a,
+.pkp_navigation_primary ul a,
+.obj_article_summary .title a,
+.obj_announcement_summary h2 a,
+.obj_announcement_summary h3 a,
+.obj_announcement_summary h4 a,
+.obj_announcement_summary a.read_more {
+ color: #ff7f00;
+ text-decoration: none;
+}
+.obj_announcement_summary h2 a:hover,
+.obj_announcement_summary h2 a:focus,
+.obj_announcement_summary h3 a:hover,
+.obj_announcement_summary h3 a:focus,
+.obj_announcement_summary h4 a:hover,
+.obj_announcement_summary h4 a:focus,
+.obj_article_summary .title a:hover,
+.obj_article_summary .title a:focus,
+.obj_announcement_summary a.read_more:hover,
+.obj_announcement_summary a.read_more:focus {
+ color: #4b7d92;
+ text-decoration: none;
+ cursor: pointer;
+}
+
+/* Buttons */
+.cmp_manuscript_button,
+.block_make_submission a,
+.galleys_links a,
+.page_search .submit button,
+.page_login .buttons button {
+ background: #4b7d92;
+ color: #fff;
+ text-align: center;
+ max-width: 135px;
+}
+.cmp_manuscript_button,
+.block_make_submission a:hover,
+.galleys_links a:hover,
+.page_search .submit button:hover,
+.page_login .buttons button:hover {
+ background: #ff7f00;
+ cursor: pointer;
+}
+.block_make_submission div {
+ min-width: 90px;
+ max-width: 135px;
+}
+
+/* Header */
 .pkp_structure_head {
  background-color: #e7e7e7;
- border-bottom: 1px solid #ddd;
 }
-
-/*bodytext start*/
-.pkp_structure_main p {
- margin: 5px 0;
- line-height: 24px;
-}
-
-/*bodytext end*/
-.obj_issue_toc .description>*:last-child {
-    margin-bottom: 0;
-    text-align: center;
-}
-.obj_issue_toc .published {
-    margin: 20px 0;
-    text-align: center;
-}
-/*site-logo start*/
-.pkp_site_name .is_img img {
- max-height: 90%;
- max-width: 100%;
- padding-left: 25%;
- padding-top: 5px;
-}
-
-/*site-logo end*/
 .pkp_site_name > a {
  padding-top: 10px;
  padding-bottom: 1px;
 }
-/*search start*/
-.pkp_head_wrapper
-.pkp_search .search_prompt { /*it works*/
- color: #FF7F00; /*original FFF*/
- font-weight: 400;
- font-variant: small-caps; /* add*/
+.pkp_site_name .is_img img {
+ max-height: 90%;
+ max-width: 100%;
+ padding-left: 25%;
+ padding-top: 15px;
 }
-/*search start*/
+.pkp_head_wrapper .pkp_search .search_prompt {
+ color: #ff7f00;
+ font-weight: 600;
+ font-variant: small-caps;
+}
+.pkp_head_wrapper .pkp_search .search_prompt:hover {
+ color: #007ab2;
+ border-bottom-color: #007ab2;
+}
+/* Navigations */
+.pkp_nav_list li a {
+ font-weight: 400;
+ padding-left: 0;
+ font-variant: small-caps;
+ font-size: 1em;
+}
+.pkp_navigation_primary li a {
+ font-size: 1.5em;
+}
+.pkp_navigation_primary li:first-child a {
+ margin-left: 12px;
+ font-size: 1.5em;
+}
+.pkp_navigation_user_wrapper {
+ border-bottom: 1px solid #ff7f00;
+}
 
-/*user admin start*/
-.pkp_navigation_user > li > a,
-.pkp_navigation_user > li.in_focus > a,
-.pkp_navigation_user > li > a:hover,
-.pkp_navigation_user > li > a:focus {
- color: #FF7F00;
- font-size: 1.0em;
- font-variant: small-caps; /* add*/
+.pkp_navigation_primary ul a {
+ font-weight: 400;
+ font-variant: small-caps;
+}
+.pkp_navigation_primary li a:hover,
+.pkp_navigation_primary li a:focus {
+ color: #007ab2;
+ border-bottom: 2px solid #007ab2;
+}
+li.profile a {
+ font-weight: 600;
+}
+.dropdown-menu li a {
+ margin: 0 !important;
+}
+
+/* Articles */
+div.pkp_structure_main {
+ background: #fff;
+ max-width: 855px;
+ border: 1px solid #4b7d92;
+ border-left: 0;
+ border-radius: 0 35px;
+ padding: 0 30px 10px;
+}
+
+.obj_issue_toc .heading {
+ border-bottom: 1px solid #ddd;
+ text-align: center;
+}
+.obj_announcement_summary h2 a,
+.obj_announcement_summary h3 a,
+.obj_announcement_summary h4 a {
+ font-size: 1.2em;
+}
+.obj_announcement_summary a.read_more {
+ font-size: 13px;
+ font-weight: 700;
+ line-height: 30px;
+}
+@media (min-width: 800px) {
+ h2 ~ article.obj_announcement_summary {
+  border-right: 1px solid #ddd;
+ }
 }
 
 .pkp_structure_main h1,
 .pkp_structure_main h2,
 .pkp_structure_main h3,
 .pkp_structure_main h4 {
+ color: #ff7f00;
  font-variant: small-caps;
- color: #FF7F00;/* add*/
- margin: 20px 0 0;
+ margin: 0;
 }
-/*user admin end*/
-
-/*menu st */
-/*Main item Mn */
-.pkp_navigation_primary_wrapper {
- background: #transparent;
- /*border-top: #FF7F00 solid 1px;*/
-}
-.pkp_navigation_user_wrapper {
- font-weight: 400;
- color: #FF7F00; /*original FFF*/
- font-variant: small-caps; /* add*/
- font-size: 1.0em;
- border-bottom: 1px solid;
-}
-
-
-.pkp_navigation_primary > li > a {
- font-weight: 400;
- color: #FF7F00; /*original FFF*/
- font-variant: small-caps; /* add*/
- font-size: 1.5em;
-
-}
-.pkp_nav_list li {
- font-weight: 400;
- padding-left: 0px;
-}
-/*Subitens main Mn */
-.pkp_navigation_primary > li:first-child a {
- font-weight: 400;
- margin-left: 12px;
- font-size: 1.5em;
-}
-.pkp_navigation_primary ul a {
- font-weight: 400;
- color:#FF7F00; /*color:#007ab2*/
- font-variant: small-caps; /* add*/
-}
-.pkp_navigation_primary > li > a:hover {
- font-weight: 400;
- color: #4b7d92; /*original FFF-FF7F00*/
- font-variant: small-caps; /* add*/
- border-bottom: 2px solid #4b7d92; /* add*/
-}
-/*menu end*/
-/*headerrrrrrrrrrr end*/
-
-
-/*mainnnnnnnnnnnnn start*/
-.pkp_structure_main {/*corpo artigos*/
- background: #FFFFFF;
- border-top: 1px solid #4b7d92;
- border-left: 2px solid #4b7d92;
- border-right: 1px solid #4b7d92;
- border-bottom: 1px solid #4b7d92;
- border-top-right-radius:35px;
- border-bottom-left-radius:35px;
-}
-.pkp_structure_main {
- width: 855px;
-}
-.obj_article_summary > .title a {
- font-size: 1.5em;
- color: #FF7F00;
- font-variant: small-caps;
- font-weight: 400;
-}
-.obj_article_summary > .title a:hover {/*artigos*/
- font-size: 1.5em;
- color: #4b7d92;
- font-variant: small-caps; /* add*/
- font-weight: 400;
-}
-/*mainnnnnnnnnnnnn end*/
-/*Main title left item Mn*/
-/*buttons start */
-
-.page_search .submit button {
- background: #4b7d92; /*#787BA2;*/
- color: #FFF;
-}
-.page_search a:hover .submit button a:hover /*work?*/ {
- color: #FFF;
- background: #FF7f00;
-}
-/*ssssssssssss pause programada*/
-
-.cmp_manuscript_button,
-.block_make_submission a,
-.obj_galley_link {
- background: #4b7d92; /*#787BA2;*/
- color: #FFF;
-}
-.cmp_manuscript_button,
-.block_make_submission a:hover,
-.obj_galley_link a:hover {
- color: #FFF;
- background: #FF7f00;
-
-}
-.obj_article_summary .galleys_links li:last-child a:hover {
- color: #FFF;
- background: #FF7f00;
-
-}
-
-/*buttons end */
-/*cover start*/
 .obj_issue_toc .cover img {
  width: auto;
- max-height: 80%;
- margin:auto;
-}
-/*cover end*/
-
-/*announcements start*/
-.obj_announcement_summary h2 a,
-.obj_announcement_summary h3 a,
-.obj_announcement_summary h4 a {
- text-decoration: none;
- font-size: 1.2em;
- color: #FF7F00;
-}
-.obj_announcement_summary h2 a:hover,
-.obj_announcement_summary h3 a:hover,
-.obj_announcement_summary h4 a:hover {
- text-decoration: none;
- font-size: 1.2em;
- color: #4b7d92;
+ max-height: 600px;
+ margin: 0 auto;
 }
 
-.obj_announcement_summary .read_more {
- font-size: 13px;
- font-weight: 700;
- line-height: 30px;
- color: #FF7F00;
+.obj_issue_toc div.section:first-child {
+ border-bottom: 1px solid #ddd;
 }
-.obj_announcement_summary a:hover .read_more a:hover {
- font-size: 13px;
- font-weight: 700;
- line-height: 30px;
- color: #4b7d92;
-}
-/*announcements end*/
-
-/*Articles*/
-.obj_article_details .main_entry {
- width: 62%;/*530px; /*560px ori*/
-}
-.obj_article_details .authors .name {
- color: #777;
-}
-.obj_article_details .item.doi .label,
-.obj_article_details .item.keywords .label {
- color: #777;
-}
-
-/****************/
-obj_article_details .entry_details !important {
- float: left;
- width: 30%;
- margin: 0 0 0 -1px;
- border-top: none;
- border-left: 1px solid #ddd;
-}
-
-/*article start*/
-.page_login .buttons button {4b7d92
- background: #4b7d92;
- color: #FFF;
-}
-.page_login a:hover .buttons button a:hover {
- background: #4b7d92;
- color: #FFF;
-}
-/*****/
-.obj_issue_toc .galleys,
 .obj_issue_toc .section {
-
- position: relative;
- margin: 30px -20px;
- padding-top: 20px;
- padding-left: 20px;
- padding-right: 20px;
- padding-bottom: 0px;
+ margin: 0 -30px;
+ padding: 0 20px;
 }
-.obj_issue_toc .galleys h2,
 .obj_issue_toc .section h2 {
-font-size: 22px;
-font-weight: 500;
+ font-size: 22px;
+ font-weight: 500;
 }
-/*********/
+.obj_article_summary .title a {
+ font-size: 1.5em;
+ font-weight: 400;
+ font-variant: small-caps;
+}
+
+/* Footer */
+.pkp_structure_footer_wrapper {
+ background: #ddd;
+}
+.pkp_structure_footer {
+ margin-top: 30px;
+}
+.pkp_footer_content {
+ display: inline-flex;
+ flex-flow: row wrap;
+ justify-content: center;
+ margin: 0 1vw;
+ padding: 0 !important;
+ text-align: center;
+ font-size: 0.9em;
+ max-width: 1000px;
+}
+.pkp_footer_content #footer-title {
+ flex-basis: 100%;
+ margin-bottom: 5px;
+ font-weight: bold;
+ color: #000;
+}
+.pkp_footer_content img {
+ margin: 0 2px;
+ height: max(10px, 3vw);
+ width: auto;
+}
+.pkp_brand_footer {
+ display: none;
+}
+/* Rest */
+.page_contact {
+ width: 50vw;
+}
+
+span.name,
+span.label {
+ color: #777;
+}
